added votes calculation in percents

--- a/data/votes.html
+++ b/data/votes.html
@@ -14,7 +14,7 @@
         <#list candidates as candidate>
         <div class="card">
             <img src="./${candidate.photo}">
-            <p>${candidate.name} is having ${candidate.votes} votes</p>
+            <p>${candidate.name} is having ${candidate.percentVotes} % votes</p>
         </div>
     </#list>
     <a class="back flex align-center" href="/">back to main</a>
